# psflib

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: dump_layout.py  dump_symbols.py  invert.py  reverse.py
psflib/: common.py
pypsf/: common.py  exceptions.py  psf1.py  psf2.py
tests/: test_fonts.py  test_psf2.py
